Se crea el listado de gráficas paginado, se dispacha el loadGraphics y se hace el select al store

--- a/src/app/graphics-card-list-container/graphics-card-list-container.component.html
+++ b/src/app/graphics-card-list-container/graphics-card-list-container.component.html
@@ -1,3 +1,12 @@
-<p>
-  graphics-card-list-container works!
-</p>
+<div fxLayout="column">
+  <div fxLayout="column" fxLayoutAlign="center center">
+    <pagination-controls (pageChange)="pageChanged($event)" class="text-center"></pagination-controls>
+  </div>
+
+  <div fxLayout="row wrap">
+    <app-graphics-card-list-element
+      *ngFor="let grephicCard of graphicsCardList$ | async | paginate: config; let i = index"
+      [graphicCard]="grephicCard"
+    ></app-graphics-card-list-element>
+  </div>
+</div>
