--- a/src/app/graphics-card-list-container/graphics-card-list-container.component.html
+++ b/src/app/graphics-card-list-container/graphics-card-list-container.component.html
@@ -7,6 +7,7 @@
     <app-graphics-card-list-element
       *ngFor="let grephicCard of graphicsCardList$ | async | paginate: config; let i = index"
       [graphicCard]="grephicCard"
+      [routerLink]="['/graphics-cards', grephicCard.id]"
     ></app-graphics-card-list-element>
   </div>
 </div>
