Creado el input search para filtrar el cardlist

--- a/src/app/graphics-card-list-container/graphics-card-list-container.component.html
+++ b/src/app/graphics-card-list-container/graphics-card-list-container.component.html
@@ -1,4 +1,16 @@
 <div fxLayout="column">
+  <form [formGroup]="formFilter" fxLayout="column" fxLayoutAlign="center center">
+    <mat-form-field appearance="fill">
+      <mat-label>Search</mat-label>
+      <input
+        matInput
+        formControlName="filter"
+        autocomplete="false
+      "
+      />
+    </mat-form-field>
+  </form>
+
   <div fxLayout="column" fxLayoutAlign="center center">
     <pagination-controls (pageChange)="pageChanged($event)" class="text-center"></pagination-controls>
   </div>
