--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,5 +6,5 @@ html,
 body {
   height: 100%;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
-  background-color: #c5c5c5;
+  background-color: #dbdada;
 }
